services/cluster-services/longhorn/overlays/nebula/ingress-dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`nebula-longhorn.nebulanet.xyz`)
      kind: Rule
      middlewares:
        - name: longhorn-dashboard-basicauth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          kind: Service
          port: http
  tls:
    secretName: longhorn-dashboard-tls
